--- a/pkgs/2gif/PKGBUILD
+++ b/pkgs/2gif/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=2gif
 pkgver=0.0.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Convert videos to .gif with ease."
 arch=('i686' 'x86_64' 'x64')
-url="https://github.com/K4rakara/dotfiles"
+url="https://github.com/K4rakara/utils"
 license=('MIT')
 depends=('jsgrep' 'round-time-up' 'mediainfo' 'ffmpeg' 'ruby')
 makedepends=('make')
