--- a/pkgs/fshuf/PKGBUILD
+++ b/pkgs/fshuf/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=fshuf
 pkgver=2.1.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Shuffles files in a directory by adding, modifying, or removing a prefix."
 arch=('i686' 'x86_64' 'x64')
-url="https://github.com/K4rakara/dotfiles"
+url="https://github.com/K4rakara/utils"
 license=('MIT')
 depends=()
 makedepends=('cargo')
