--- a/pkgs/round-time-up/PKGBUILD
+++ b/pkgs/round-time-up/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=round-time-up
 pkgver=0.0.2
-pkgrel=2
+pkgrel=3
 pkgdesc="Pipe a time formatted as hh:mm:ss.ms and this tool will round it to the nearest second."
 arch=('i686' 'x86_64' 'x64')
-url="https://github.com/K4rakara/dotfiles"
+url="https://github.com/K4rakara/utils"
 license=('MIT')
 depends=('nodejs')
 makedepends=('just' 'yarn' 'nodejs')
