--- a/gui/launcher/Cargo.toml
+++ b/gui/launcher/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "launcher"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Jack Johannesen <jack@insertdomain.name>"]
 edition = "2018"
 
@@ -17,6 +17,7 @@ log = "0.4.11"
 chrono = "0.4.15"
 clap = "2.33"
 lazy_static = "1.4.0"
+regex = "1.4"
 
 [dependencies.cairo-rs]
 version = "0.9.0"
